--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "web-vitals": "^2.1.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-server": "^5.0.4",
+    "react-transition-group": "^v4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,6 +57,6 @@
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.5.3"
+    "typescript": "^2.7"
   }
 }
