--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "homepage": "https://MarcosMatozo.github.io/portifolio.github.io/",
   "dependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "animate.css": "^4.1.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
+    "styled-components": "^6.1.11",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "react-transition-group": "^v4.4.5"
+    "webpack-dev-server": "^5.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
@@ -56,7 +63,6 @@
     "sass": "^1.77.8",
     "sass-loader": "^14.2.1",
     "style-loader": "^4.0.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^2.7"
+    "ts-loader": "^9.5.1"
   }
 }
