--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.3.0",
     "animate.css": "^4.1.1",
     "babel-plugin-styled-components": "^2.1.4",
+    "copy-webpack-plugin": "^12.0.2",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build-webpack",
     "webpack": "webpack serve --open --config webpack.dev.js",
     "build-webpack": "webpack --config webpack.prod.js"
   },
