--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "webpack": "webpack serve --open --config webpack.dev.js",
-    "build-webpack": "webpack --config webpack.prod.js"
+    "build-webpack": "webpack --config webpack.prod.js && node deploy-git-pages.js",
+    "deploy-gitpg": "node deploy-git-pages.js"
   },
   "eslintConfig": {
     "extends": [
